ingress/app-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
  name: app-ingress
spec:
  rules:
  - host: app.lab.knic.io
    http:
      paths:
      - backend:
          serviceName: appsvc1
          servicePort: 80
        path: /
      - backend:
          serviceName: appsvc2
          servicePort: 80
        path: /app2
