ingress/kuard-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
  name: kuard-ingress
spec:
  rules:
  - host: kuard.lab.knic.io
    http:
      paths:
      - backend:
          serviceName: kuard
          servicePort: 8080
          #        path: /
